# 4_sem

./: README.md  lect_plan_2025.md  lect_plan_2026.md
2024/parprog/distributed/lamport_clock/: clock.hpp  test.cpp
2024/parprog/distributed/leader_election/: 1_bully_algo_c.c  2_bully_and_ring_sim.cpp
2024/parprog/stdthread/: example.cpp
2024/tech/cmake_lesson/: readme.md
2024/tech/cmake_lesson/intro/mylib_project/: CMakeLists.txt  main.cpp
2024/tech/cmake_lesson/intro/mylib_project/lib/: CMakeLists.txt
2024/tech/deb_lesson/: howto_make_deb.md  notes.md  version_notes.md
2024/tech/google_test_lesson/: notes.md
2026/misc/cpp/: readme.txt  template_code_bloat.cpp  variadic_t_bloat.cpp
distributed/clocks/: lamport_logical.md  vector_logical.md
distributed/clocks/extra/: timers_interfaces.md
final_project/: proposed_topics.txt
materials/containers/: enum_vec_elem.md
materials/lectures/: readme.md
materials/seminar8/exceptions/: objects_destr.cpp  rel.md  rel_graph.md  type_conv.cpp
patterns/: 4_a_f_before_refactor.cpp  4_abstract_factory.cpp  a.out  builder.cpp  factory_method.cpp  object_pool.cpp  prototype.cpp  singleton.cpp
patterns/all_patterns_archive/: readme.md
patterns/arch_patterns/: clean_ms.md  event_bus.cpp  hexagonal_ports_and_adapters.md  mvc.md  mvvm.md  onion_ms.md
